--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,7 @@ title: "JSM 2025 Short Course"
 
 ## Large Local Data
 
-by: Kelly Bodwin, Tyson Barrett & Jon Keane
+by: Kelly Bodwin, Tyson Barrett & Jonathan Keane
 
 # Welcome!
 
@@ -32,8 +32,8 @@ We expect attendees to have R fluency at the level of a typical introductory cou
 | 10:30 - 11:30 | [II. data.table for fast wrangling](materials/slides/02-datatable.qmd) | Tyson |
 | 11:30 - 12:00| [Activity 2](materials/activities/02-practice-datatable.qmd) | Tyson |
 | 12:00 - 1:30 | Lunch Break |  |
-| 1:30 - 2:30 | [III. arrow, parquet, duckdb](materials/slides/03-arrow.qmd) | Jon |
-| 2:30 - 3:00 | [Activity 3](materials/activities/03-practice-arrow.qmd) | Jon  |
+| 1:30 - 2:30 | [III. parquet, arrow, duckdb](materials/slides/03-arrow.qmd) | Jonathan |
+| 2:30 - 3:00 | [Activity 3](materials/activities/03-practice-arrow.qmd) | Jonathan  |
 | 3:00 - 3:30 | Break |  |
 | 3:30 - 4:30 | [IV. Workflow](materials/slides/04-workflow.qmd) | all |
 | 4:30 - 5:00 | [Activity 4](materials/activities/04-practice-workflow.qmd) | all |
